trying to fix bug where dropdown menu stays when on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,87 @@ ul{
 	}
 }
 
+@media (max-width: 800px){
+	.sidebar-sticky-wrapper{
+		width: 100%;
+	}
+
+	.sidebar{
+		width: 100%;
+		height: 80px;
+		border-right: 0;
+		border-bottom: 1px solid #2B5166;
+		text-align: right;
+		padding: 0;
+	}
+
+	.sidebar a{
+		position: absolute;
+		left: 20px;
+		top: 4px;
+	}
+
+	.sidebar a img{
+		width: 80px;
+		margin: -5px 20px 0 0;
+		position: relative;
+	}
+
+	.sidebar div h2{
+		display: none;
+	}
+
+	.guide-dropdown{
+		display: inline-block;
+		text-align: center;
+	}
+	.guide-dropdown:hover{
+		background-color: #2B5166;
+		cursor: pointer;
+	}
+	.guide-dropdown:hover > li h2{
+		color: #EEEFEE;
+	}
+
+	.guide-dropdown li:hover > ul{
+		display: block;
+	}
+
+	.guide-dropdown ul{
+		display: none;
+		background-color: #EEEFEE;
+		padding: 30px;
+		border: 1px solid #2B5166;
+	}
+
+	.guide-dropdown li a{
+		position: initial;
+	}
+
+	.guide-dropdown li h2{
+		display: inline-block;
+		padding: 30px 30px 0 30px;
+		margin-bottom: 30px;
+	}
+
+	.sidebar a h5{
+		margin: -1px 0;
+		padding: 5px;
+	}
+
+
+	.column-content{
+		padding: 100px 14% 20px;
+	}
+
+
+	.tab{
+		margin-top: 119px;
+		margin-right: -120px;
+		width: 280px;
+	}
+}
+
 @media (max-width: 630px){
 	.sidebar-sticky-wrapper{
 		width: 100%;
